--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,30 @@
-# Node & React build files
+# Node
 node_modules/
 client/node_modules/
+
+# Build output
+dist/
+build/
+client/dist/
+client/build/
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
 # Environment variables
 .env
 .env.local
 
-# Dist / build folders
-dist/
-build/
-client/dist/
-
 # System files
 .DS_Store
 Thumbs.db
 
-# IDE / Editor stuff
+# Editor
 .vscode/
 .idea/
 
 # Cache
 .cache/
-*.log
